implement findBeerByName + refactoreds tests